--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 	</div>
 </section>
 
-
+<script src="assets/js/imagesloaded.pkgd.min.js"></script>
 <!-- Mansonry.js for customized thumbnail layouts-->
 <script src="assets/js/masonry.min.js"></script>
 <script src="assets/js/masonry.js"></script>
