--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
 				<p class="lead">Have a question about something you see here... </br>or anything about maps or design in general?</p>
-				<p>Feel free to email me!</p>
+				<p class="lead">Feel free to email me!</p>
 				<p><b>bgarman4@gmail.com</b><br><br></p>
 				<ul class="list-inline list-social">
 					<li><a href="https://github.com/bgarman4" target="_blank" class="btn btn-link"><i class="fa fa-github fa-fw"></i> Github</a></li>
