--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 				<div class="item">
 				<div class="thumbnail">
 					<img src="assets/images/GL_basins.jpg" alt="">
+					<img src="assets/images/great_lakes.jpg" alt="">
 					<div class="caption">
 						<h3>Great Lakes Watersheds</h3>
 					</div>
@@ -262,6 +263,20 @@
 					<img src="assets/images/systemwide_2014.jpg" alt="">
 					<div class="caption">
 						<h3>Cleveland Metropark Systemwide Map</h3>
+					</div>
+				</div>
+				</div>
+				
+				<div class="item">
+				<div class="thumbnail">
+					<img src="assets/images/original_floormap.png" alt="">
+					<img src="assets/images/wc_floor2_large.png" alt="">
+					<img src="assets/images/wc_floor1_large.png" alt="">
+					<img src="assets/images/wc_floor3_large.png" alt="">
+					<img src="assets/images/wc_floor4_large.png" alt="">
+					<img src="assets/images/wc_floor5_large.png" alt="">
+					<div class="caption">
+						<h3>West Creek Watershed Stewardship Center Floor Map</h3>
 					</div>
 				</div>
 				</div>
